fix layout bug

--- a/csfieldguide/static/interactives/password-guesser/scss/password-guesser.scss
+++ b/csfieldguide/static/interactives/password-guesser/scss/password-guesser.scss
@@ -21,7 +21,6 @@
 }
 
 #pg-checker, #pg-hints {
-	max-width: 1000px;
 	details {
 		border: 1px solid;
 		border-radius: 5px;
@@ -34,6 +33,10 @@
 	details[open] {
 		padding: 0.5rem;
 	}
+}
+
+#pg-clues, #pg-guesser {
+	max-width: 1000px;
 }
 
 #pg-calculated-hash {
